[project]
name = "agents-100-days"
version = "0.1.0"
description = "100 days of learning agent-driven AI systems."
requires-python = ">=3.12"
dependencies = [
    "openai",
    "openai-agents", 
    "openai-agents[viz]",
    "openai-agents[litellm]",
    "litellm",
    "ipykernel",
    "ipywidgets",
    "pandas",
    "matplotlib",
    "seaborn",
    "scipy",
    "scikit-learn",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"